Major version, some improvements include: 0)  Resizable handle added to the generated graphics. 1)  Resizing the window also resizes the grid panel. 2)  Double clicking between the 2 column headers in the grid panel fits the width of the column to the left to its contents. 3)  Comboboxes now have resize handles. 4)  Css file modified so that the loading mask stays horizontally centered after window resize. 5)  Hashing of the netCdf file implemented, based on the names of the FCS files and their contents. 6)  Axes choices are dynamically pulled from the keywords. 7)  Designed changed and rearranged to be cleaner. 8)  Comboboxes' lists widths sizes automatically to the current contents of the list. 9)  Instead of the files keywords now for the study variables meta data headers are available. 10) netCdf functionality moved to the OpenCytoPreprocessing module. 11) The module was completely reworked to be an extension of an existing panel, each element now is unique and so the web part would not conflict with any other web parts (even another copy of the same module). 12) Additional plot controls show up only, when there are 2 appropriate choices for the axes. 13) Population gates visualization added. 14) When a population is selected, if there is only one associated projection, then it gets selected, otherwise a drop down list of the projections combobox is presented with the available choices. 15) When a population is picked, the axes get set accordingly. 16) UI elements alignment is changed to be 'left'

--- a/build.xml
+++ b/build.xml
@@ -1,12 +1,12 @@
-<project name="FlowGraph" basedir="." default="deploy">
+<project name="OpenCytoVisualization" basedir="." default="deploy">
 
   <property environment="env"/>
   <property name="project.root" value="../../.."/>
   <property name="staging.modules.dir" value="${project.root}/build/staging/modules"/>
   <property name="deploy.modules.dir" value="${project.root}/build/deploy/modules"/>
 
-  <property name="module.name" value="FlowGraph"/>
-  <property name="module.file" value="FlowGraph.module"/>
+  <property name="module.name" value="OpenCytoVisualization"/>
+  <property name="module.file" value="OpenCytoVisualization.module"/>
   <property name="module.src.dir" value="${basedir}/src"/>
 
   <target name="init">
