--- a/module.properties
+++ b/module.properties
@@ -1,4 +1,4 @@
-Name: FlowGraph
+Name: OpenCytoVisualization
 ModuleClass: org.labkey.api.module.SimpleModule
 RequiredServerVersion: 12.10
 Version: 0.01
