--- a/module.properties
+++ b/module.properties
@@ -2,4 +2,4 @@ Name: OpenCytoVisualization
 ModuleClass: org.labkey.api.module.SimpleModule
 RequiredServerVersion: 12.10
 Version: 0.01
-ModuleDependencies: Flow
+ModuleDependencies: OpenCytoPreprocessing
